--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "lightstrap",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "LightStrap is a Tailwind UI Kit with boostrap compatibility",
   "main": "index.js",
   "author": "arryanggaputra@gmail.com",
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.17",
+    "semantic-release": "^18.0.0"
+  },
+  "scripts": {
+    "semantic-release": "semantic-release"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arryanggaputra/lightstrap.git"
   }
 }
