--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,11 @@
 name: Publish NPM Package
 
 on:
+  push:
+    tags:
+      - 'v*'
   release:
-    types:
-      - created
+    types: [published]
 
 jobs:
   build:
